# detector

./: .gitignore  CMakeLists.txt  run_alignment_test.bat  run_api_logger_test.bat  run_test.bat  test_params.ps1
CSharp/: DefectDetectionAPI.cs  Demo.cs  Program.cs
CSharp_ZN/: DefectDetectionAPI.cs  Program.cs  Program2.cs
DetectionUITest/: DefectDetectionAPI.cs  DetectionUITest.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  SocketClient.cs  SocketProtocol.cs
DetectionUITest/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
api/: api_logger.h  c_api.cpp  c_api.h
config/: manual_roi.json  roi_config.json  visualization_config.json
data/problem/: 匹配信息_116_20260304161622333(1).csv
detection/: CMakeLists.txt
detection/api/: c_api.cpp  c_api.h
detection/include/: defect_detector.h  localization.h  roi_manager.h  template_learner.h  template_matcher.h  types.h  visualization_config.h  visualizer.h
detection/src/: defect_analyzer.cpp  defect_detector.cpp  localization.cpp  template_learner.cpp  template_matcher.cpp  visualization_config.cpp  visualizer.cpp
detection/tests/: demo.cpp  test_performance.cpp
include/: defect_analyzer.h  template_matcher.h  types.h  visualizer.h
src/: defect_analyzer.cpp  defect_detector.cpp  roi_manager.cpp  template_matcher.cpp  visualizer.cpp
tests/: debug_detection.cpp  demo.cpp  demo_cpp.cpp  demo_dll.cpp  test_api_logger.cpp  test_api_v2.cpp  test_detection.cpp  test_detection_with_log.cpp
